// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<field_list>
<field>
<field_name>what</field_name><field_body><paragraph>Field lists map field names to field bodies, like
database records.  They are often part of an extension
syntax.</paragraph></field_body></field></field_list><field_list><field><field_name>how</field_name><field_body><paragraph>The field marker is a colon, the field name, and a
colon.</paragraph><paragraph>The field body may contain one or more body elements,
indented relative to the field marker.</paragraph></field_body></field></field_list></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Random 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><bullet_list bullet=\\"*\\"><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Random 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"Header 1\\" names=\\"Header 1\\">
<title>Header 1</title><paragraph>Text</paragraph><section ids=\\"Header 2\\" names=\\"Header 2\\"><title>Header 2</title><system_message line=\\"6\\"><paragraph>Title underline too short.</paragraph><literal_block>Header 2
-------</literal_block></system_message></section></section></document>"
`;

exports[`Random 2 2`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 4 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"Test3\\" names=\\"Test3\\">
<title>Test3</title><paragraph>This is a test.</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph>BUllet list 1</paragraph></list_item></bullet_list><bullet_list bullet=\\"*\\"><list_item><paragraph>The emacs rst editor is weird.</paragraph></list_item></bullet_list></section></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"Title\\" names=\\"Title\\">
<title>Title</title><paragraph>Paragraph.</paragraph></section></document>"
`;
